Target the number of the recipes by clicking on the viez

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -50,7 +50,9 @@
           <!-- TODO Replace this anchor element's href attribute with a
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
-          <a href="#"> <img src="images/edit.svg" height="12px"> Edit </a>
+          <a href="#" ng-click="getRecipe($index)" > 
+            <img src="images/edit.svg" height="12px"> Edit
+          </a>
           <!-- TODO Add a directive to this anchor element so that you can
             delete the recipe when the user clicks on the 'Delete' link. -->
           <a class="no-action-link"> <img src="images/delete.svg" height="12px"> Delete </a>
