Display the list of categories within the select menu

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -6,6 +6,7 @@
       selects a new category so that you can refresh the recipes list. -->
     <select>
       <option value="">All Categories</option>
+      <option ng-repeat="category in categories" value="{{category._id}}" >{{category.name}}</option>
     </select>
   </div>
   <div class="grid-70">
@@ -50,7 +51,7 @@
           <!-- TODO Replace this anchor element's href attribute with a
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
-          <a href="#" ng-click="getRecipe($index)" > 
+          <a href="#" ng-click="getRecipe($index)" >
             <img src="images/edit.svg" height="12px"> Edit
           </a>
           <!-- TODO Add a directive to this anchor element so that you can
