Add new directives

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -13,7 +13,9 @@
     <div class="flush-right">
       <!-- TODO Add a directive to this button in order to handle
         when the user clicks to add a new recipe. -->
-      <button>+ Add Recipe</button>
+      <button ng-click="addRecipe()">
+        + Add Recipe
+      </button>
     </div>
   </div>
 </div>
@@ -38,9 +40,10 @@
     <div class="grid-70">
       <p>
         <!-- TODO Add binding expressions here in order to display information about the recipe. -->
-        {{recipe.name}}
+        <strong>{{recipe.name}}</strong>
+
         <br>
-        {{recipe.description}}
+        <em>{{recipe.description}}</em>
       </p>
     </div>
   </a>
@@ -51,12 +54,16 @@
           <!-- TODO Replace this anchor element's href attribute with a
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
-          <a href="#" ng-click="getRecipe($index)" >
-            <img src="images/edit.svg" height="12px"> Edit
+          <a ng-click="getRecipe($index)" >
+            <img src="images/edit.svg" height="12px">
+            Edit
           </a>
           <!-- TODO Add a directive to this anchor element so that you can
             delete the recipe when the user clicks on the 'Delete' link. -->
-          <a class="no-action-link"> <img src="images/delete.svg" height="12px"> Delete </a>
+          <a class="no-action-link" ng-click="deleteRecipe($index)">
+            <img src="images/delete.svg" height="12px">
+            Delete
+          </a>
         </p>
       </div>
     </div>
