Create Recipe Detail Controller and start implementing click event

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -54,7 +54,7 @@
           <!-- TODO Replace this anchor element's href attribute with a
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
-          <a ng-click="getRecipe($index)" >
+          <a href="/#/edit/{$index}" ng-click="getRecipe($index)" >
             <img src="images/edit.svg" height="12px">
             Edit
           </a>
