--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -54,7 +54,10 @@
           <!-- TODO Replace this anchor element's href attribute with a
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
-          <a href="/#/edit/{$index}" ng-click="getRecipe($index)" >
+          <a
+            ng-href="/#!/edit/{{recipe._id}}"
+            ng-click="getRecipe($index)"
+          >
             <img src="images/edit.svg" height="12px">
             Edit
           </a>
