Add a way to add new recipes

--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -10,7 +10,12 @@
       <!-- TODO Add directives to both the "Save Recipe" and "Cancel"
         buttons in order to handle user clicks. -->
       <button>Save Recipe</button>
-      <button class="secondary">Cancel</button>
+      <button
+        ng-click="returnHomePage()"
+        class="secondary"
+      >
+        Cancel
+      </button>
     </div>
   </div>
 </div>
