--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -13,7 +13,9 @@
     <div class="flush-right">
       <!-- TODO Add a directive to this button in order to handle
         when the user clicks to add a new recipe. -->
-      <button ng-click="addRecipe()">
+      <button
+        ng-click="addRecipe()"
+      >
         + Add Recipe
       </button>
     </div>
