Add a new controller which displays the recipe

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -6,7 +6,12 @@
       selects a new category so that you can refresh the recipes list. -->
     <select>
       <option value="">All Categories</option>
-      <option ng-repeat="category in categories" value="{{category._id}}" >{{category.name}}</option>
+      <option
+        ng-repeat="category in categories"
+        value="{{category._id}}"
+      >
+        {{category.name}}
+      </option>
     </select>
   </div>
   <div class="grid-70">
@@ -65,7 +70,11 @@
           </a>
           <!-- TODO Add a directive to this anchor element so that you can
             delete the recipe when the user clicks on the 'Delete' link. -->
-          <a class="no-action-link" ng-click="deleteRecipe($index)">
+          <a
+            class="no-action-link"
+            ng-click="deleteRecipe($index)"
+            ng-href="/#!/delete/{{recipe._id}}"
+          >
             <img src="images/delete.svg" height="12px">
             Delete
           </a>
