Populate the categories from the data base and display them within select options

--- a/public/templates/delete-recipe.html
+++ b/public/templates/delete-recipe.html
@@ -1,5 +1,5 @@
-<div ng-show="isEmptyRecipeList()" class="grid-100 row">
+<div class="grid-100 row">
   <div class="grid-70">
-    <p>Delete a recipe</p>
+    <h2>Delete a recipe</h2>
   </div>
 </div>
