--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -169,7 +169,12 @@
       <p class="flush-right">
         <!-- TODO Add a directive to this anchor element so that you can
           delete the recipe ingredient when the user clicks on the 'Delete' link. -->
-        <a class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
+        <a
+          ng-click="deleteIngredientItem()"
+          class="no-action-link"
+        >
+          <img src="images/delete.svg" height="12px">
+        </a>
       </p>
     </div>
   </div>
@@ -178,7 +183,11 @@
     <p>
       <!-- TODO Add a directive to this button in order to handle
         when the user clicks to add a new recipe ingredient. -->
-      <button>+ Add Another Ingredient</button>
+      <button
+        ng-click="addNewIngredient()"
+      >
+        + Add Another Ingredient
+      </button>
     </p>
   </div>
 
@@ -211,7 +220,12 @@
       <p class="flush-right">
         <!-- TODO Add a directive to this anchor element so that you can
           delete the recipe step when the user clicks on the 'Delete' link. -->
-        <a class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
+        <a
+          ng-click="deleteStep()"
+          class="no-action-link"
+        >
+          <img src="images/delete.svg" height="12px">
+        </a>
       </p>
     </div>
   </div>
@@ -220,7 +234,11 @@
     <p>
      <!-- TODO Add a directive to this button in order to handle
        when the user clicks to add a new recipe step. -->
-     <button>+ Add Another Step</button>
+     <button
+      ng-click="addNewStep()"
+     >
+       + Add Another Step
+     </button>
     </p>
   </div>
 
