Show all recipes within the recipes template

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -29,7 +29,9 @@
 <!-- TODO Add a directive to this div element so that it repeats
   for each recipe to display. Also, add a directive to this div element
   so that it only displays when there are recipes to display. -->
-<div class="grid-100 row addHover">
+<div
+  class="grid-100 row addHover"
+  ng-repeat="recipe in recipes">
   <!-- TODO Replace this anchor element's href attribute with a
     directive so that you can route the user to the Recipe Detail
     screen when they click on a row. -->
@@ -38,6 +40,9 @@
       <p>
         <!-- TODO Add binding expressions here in order to
           display information about the recipe. -->
+          {{recipe.name}}
+          <br>
+          {{recipe.description}}
       </p>
     </div>
   </a>
