--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -20,11 +20,16 @@
 
 <!-- TODO Add a directive to this div element so that it only displays
   when there are no recipes to display. -->
+
+<!--
 <div class="grid-100 row">
   <div class="grid-70">
     <p>No recipes found!</p>
   </div>
 </div>
+-->
+
+<!-- END: TODO => add directive to the div no Recipes found -->
 
 <!-- TODO Add a directive to this div element so that it repeats
   for each recipe to display. Also, add a directive to this div element
@@ -35,7 +40,9 @@
   <!-- TODO Replace this anchor element's href attribute with a
     directive so that you can route the user to the Recipe Detail
     screen when they click on a row. -->
-  <a href="#">
+  <a
+    ng-href="#"
+    ng-click="seeRecipe()">
     <div class="grid-70">
       <p>
         <!-- TODO Add binding expressions here in order to
@@ -53,10 +60,20 @@
           <!-- TODO Replace this anchor element's href attribute with a
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
-          <a href="#"> <img src="images/edit.svg" height="12px"> Edit </a>
+          <a
+            href="#"
+            ng-click="editRecipe()">
+            <img src="images/edit.svg" height="12px">
+            Edit
+          </a>
           <!-- TODO Add a directive to this anchor element so that you can
             delete the recipe when the user clicks on the 'Delete' link. -->
-          <a class="no-action-link"> <img src="images/delete.svg" height="12px"> Delete </a>
+          <a
+            class="no-action-link"
+            ng-click="deleteRecipe()"> 
+            <img src="images/delete.svg" height="12px">
+            Delete
+          </a>
         </p>
       </div>
     </div>
