--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -46,8 +46,7 @@
     directive so that you can route the user to the Recipe Detail
     screen when they click on a row. -->
   <a
-    ng-href="#"
-    ng-click="seeRecipe()">
+    ng-href="/#!/edit/{{recipe._id}}">
     <div class="grid-70">
       <p>
         <!-- TODO Add binding expressions here in order to
