Add a special recipe view in order to display the recipe when the route is matching

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -46,7 +46,7 @@
     directive so that you can route the user to the Recipe Detail
     screen when they click on a row. -->
   <a
-    ng-href="/#!/edit/{{recipe._id}}">
+    ng-href="/#!/recipe/{{recipe._id}}">
     <div class="grid-70">
       <p>
         <!-- TODO Add binding expressions here in order to
