Update recipe list

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -65,8 +65,7 @@
             directive so that you can route the user to the Recipe Detail
             screen when they click on the 'Edit' link. -->
           <a
-            href="#"
-            ng-click="editRecipe()">
+            ng-href="/#!/edit/{{recipe._id}}">
             <img src="images/edit.svg" height="12px">
             Edit
           </a>
