--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -10,7 +10,10 @@
       <!-- TODO Add directives to both the "Save Recipe" and "Cancel"
         buttons in order to handle user clicks. -->
       <button>Save Recipe</button>
-      <button class="secondary">Cancel</button>
+      <button 
+				class="secondary">
+				Cancel
+			</button>
     </div>
   </div>
 </div>
@@ -26,7 +29,7 @@
     <p>
       <!-- TODO Add a directive to this input element to bind its value
         to the recipe model's `name` property. -->
-      <input type="text">
+      <input ng-model="recipe.name" type="text">
     </p>
   </div>
 </div>
@@ -42,7 +45,8 @@
     <p>
       <!-- TODO Add a directive to this textarea element to bind its content
         to the recipe model's `description` property. -->
-      <textarea></textarea>
+      <textarea  
+				ng-model="recipe.description"></textarea>
     </p>
   </div>
 </div>
@@ -77,7 +81,7 @@
     <p>
       <!-- TODO Add a directive to this input element to bind its value
         to the recipe model's `prepTime` property. -->
-      <input type="number">
+      <input ng-model="recipe.prepTime" type="number">
     </p>
   </div>
 </div>
@@ -93,7 +97,7 @@
     <p>
       <!-- TODO Add a directive to this input element to bind its value
         to the recipe model's `cookTime` property. -->
-      <input type="number">
+      <input ng-model="recipe.cookTime" type="number">
     </p>
   </div>
 </div>
