Update the delete view

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -73,7 +73,7 @@
             delete the recipe when the user clicks on the 'Delete' link. -->
           <a
             class="no-action-link"
-            ng-click="deleteRecipe()">
+            ng-href="/#!/delete/{{recipe._id}}">
             <img src="images/delete.svg" height="12px">
             Delete
           </a>
