--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -11,6 +11,7 @@
         buttons in order to handle user clicks. -->
       <button>Save Recipe</button>
       <button 
+				ng-click="cancelEdit()"
 				class="secondary">
 				Cancel
 			</button>
