--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -17,7 +17,10 @@
     <div class="flush-right">
       <!-- TODO Add a directive to this button in order to handle
         when the user clicks to add a new recipe. -->
-      <button ng-click="addRecipe()">+ Add Recipe</button>
+      <button 
+				ng-click="addRecipe()">
+				+ Add Recipe
+			</button>
     </div>
   </div>
 </div>
