Add steps in text input

--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -187,12 +187,14 @@
 
   <!-- TODO Add a directive to this div element so that it repeats
     for each recipe step to display. -->
-  <div class="step-row">
+  <div class="step-row" ng-repeat="step in recipe.steps">
     <div class="prefix-20 grid-75">
       <p>
         <!-- TODO Add a directive to this input element to bind its value
           to the recipe step model's `description` property. -->
-        <input type="text">
+        <input 
+					type="text"
+					ng-model="step.description">
       </p>
     </div>
     <div class="grid-5 pad-top">
