Populate the list of categories in order to add filter when displaying the recipes

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -4,13 +4,8 @@
       populate the list with the categories from the database.
       You'll also need to add directives to handle when the user
       selects a new category so that you can refresh the recipes list. -->
-    <select>
+    <select ng-model="currentCategory" ng-options="category.name for category in categories" ng-change="getsRecipeByCategory()">
       <option value="">All Categories</option>
-      <option
-        ng-repeat="category in categories"
-        value="category._id">
-        {{category.name}}
-      </option>
     </select>
   </div>
   <div class="grid-70">
