Get the filtered recipe from the API

--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -4,7 +4,7 @@
       populate the list with the categories from the database.
       You'll also need to add directives to handle when the user
       selects a new category so that you can refresh the recipes list. -->
-    <select ng-model="currentCategory" ng-options="category.name for category in categories" ng-change="getsRecipeByCategory()">
+    <select ng-model="currentCategory" ng-options="category.name for category in categories" ng-change="filterRecipeByCategory()">
       <option value="">All Categories</option>
     </select>
   </div>
