--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -24,13 +24,12 @@
 <!-- TODO Add a directive to this div element so that it only displays
   when there are no recipes to display. -->
 
-<!--
-<div class="grid-100 row">
+	
+<div ng-show="noRecipeFromFilter()" class="grid-100 row">
   <div class="grid-70">
     <p>No recipes found!</p>
   </div>
 </div>
--->
 
 <!-- END: TODO => add directive to the div no Recipes found -->
 
