Start implementing the save/edit mode in order to record modifications inside the database

--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -10,7 +10,10 @@
     <div class="flush-right">
       <!-- TODO Add directives to both the "Save Recipe" and "Cancel"
         buttons in order to handle user clicks. -->
-      <button>Save Recipe</button>
+      <button
+				ng-click="saveRecipe()">
+				Save Recipe
+			</button>
       <button 
 				ng-click="cancelEdit()"
 				class="secondary">
