--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -205,7 +205,11 @@
       <p class="flush-right">
         <!-- TODO Add a directive to this anchor element so that you can
           delete the recipe step when the user clicks on the 'Delete' link. -->
-        <a class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
+        <a 
+					class="no-action-link"
+					ng-click="removeStep($index)"> 
+					<img src="images/delete.svg" height="12px"> 
+				</a>
       </p>
     </div>
   </div>
@@ -214,7 +218,10 @@
     <p>
      <!-- TODO Add a directive to this button in order to handle
        when the user clicks to add a new recipe step. -->
-     <button>+ Add Another Step</button>
+			<button
+				ng-click="addStep()">
+				+ Add Another Step
+			</button>
     </p>
   </div>
 
