Start adding how to add and remove ingredients

--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -161,7 +161,11 @@
       <p class="flush-right">
         <!-- TODO Add a directive to this anchor element so that you can
           delete the recipe ingredient when the user clicks on the 'Delete' link. -->
-        <a class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
+        <a 
+					class="no-action-link"
+					ng-click="removeIngredient()"> 
+					<img src="images/delete.svg" height="12px"> 
+				</a>
       </p>
     </div>
   </div>
@@ -170,7 +174,10 @@
     <p>
       <!-- TODO Add a directive to this button in order to handle
         when the user clicks to add a new recipe ingredient. -->
-      <button>+ Add Another Ingredient</button>
+      <button
+				ng-click="addIngredient()">
+				+ Add Another Ingredient
+			</button>
     </p>
   </div>
 
