Display the list of food ingredients within the recipe edit and add view

--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -132,13 +132,13 @@
 
   <!-- TODO Add a directive to this div element so that it repeats
     for each recipe ingredient to display. -->
-  <div class="ingredient-row">
+  <div class="ingredient-row" ng-repeat="ingredient in recipe.ingredients">
     <div class="prefix-20 grid-30">
       <p>
         <!-- TODO Add directives to this select element to bind its value
           to the recipe ingredient model's `foodItem` property and to
           populate the list with the food items from the database. -->
-        <select>
+        <select ng-model="ingredient.foodItem" ng-options="foodItem.name as foodItem.name for foodItem in foodItems">
           <option value="">Select Item</option>
         </select>
       </p>
@@ -147,14 +147,14 @@
       <p>
         <!-- TODO Add a directive to this input element to bind its value
           to the recipe ingredient model's `condition` property. -->
-        <input type="text">
+        <input ng-model="ingredient.condition" type="text">
       </p>
     </div>
     <div class="grid-15">
       <p>
         <!-- TODO Add a directive to this input element to bind its value
           to the recipe ingredient model's `amount` property. -->
-        <input type="text">
+        <input ng-model="ingredient.amount" type="text">
       </p>
     </div>
     <div class="grid-5 pad-top">
