--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -1,15 +1,12 @@
 <div class="grid-100 row controls">
   <div class="grid-50">
-    <!-- TODO Add a binding expression to display the recipe name
-      when editing a recipe. When adding a recipe, display the
-      static text 'Add New Recipe'. -->
-    <!--<h2>Add/Edit Recipe</h2>-->
-		<h2>{{mainViewTitle}}</h2>
+		<h2>
+			<!-- Change title according to the view: edit or add -->
+			{{mainViewTitle}}
+		</h2>
   </div>
   <div class="grid-50">
     <div class="flush-right">
-      <!-- TODO Add directives to both the "Save Recipe" and "Cancel"
-        buttons in order to handle user clicks. -->
       <button
 				ng-click="saveRecipe()">
 				Save Recipe
@@ -32,8 +29,6 @@
   </div>
   <div class="grid-40">
     <p>
-      <!-- TODO Add a directive to this input element to bind its value
-        to the recipe model's `name` property. -->
       <input ng-model="recipe.name" type="text">
     </p>
   </div>
@@ -48,8 +43,6 @@
   </div>
   <div class="grid-60">
     <p>
-      <!-- TODO Add a directive to this textarea element to bind its content
-        to the recipe model's `description` property. -->
       <textarea  
 				ng-model="recipe.description"></textarea>
     </p>
@@ -65,9 +58,6 @@
   </div>
   <div class="grid-30">
     <p>
-      <!-- TODO Add directives to this select element to bind its value
-        to the recipe model's `category` property and to populate the list
-        with the categories from the database. -->
       <select ng-model="recipe.category" ng-options="category.name as category.name for category in categories">
         <option value="">All Categories</option>
       </select>
@@ -84,8 +74,6 @@
   </div>
   <div class="grid-20">
     <p>
-      <!-- TODO Add a directive to this input element to bind its value
-        to the recipe model's `prepTime` property. -->
       <input ng-model="recipe.prepTime" type="number">
     </p>
   </div>
@@ -100,8 +88,6 @@
   </div>
   <div class="grid-20">
     <p>
-      <!-- TODO Add a directive to this input element to bind its value
-        to the recipe model's `cookTime` property. -->
       <input ng-model="recipe.cookTime" type="number">
     </p>
   </div>
@@ -130,14 +116,9 @@
     </p>
   </div>
 
-  <!-- TODO Add a directive to this div element so that it repeats
-    for each recipe ingredient to display. -->
   <div class="ingredient-row" ng-repeat="ingredient in recipe.ingredients">
     <div class="prefix-20 grid-30">
       <p>
-        <!-- TODO Add directives to this select element to bind its value
-          to the recipe ingredient model's `foodItem` property and to
-          populate the list with the food items from the database. -->
         <select ng-model="ingredient.foodItem" ng-options="foodItem.name as foodItem.name for foodItem in foodItems">
           <option value="">Select Item</option>
         </select>
@@ -145,22 +126,16 @@
     </div>
     <div class="grid-30">
       <p>
-        <!-- TODO Add a directive to this input element to bind its value
-          to the recipe ingredient model's `condition` property. -->
         <input ng-model="ingredient.condition" type="text">
       </p>
     </div>
     <div class="grid-15">
       <p>
-        <!-- TODO Add a directive to this input element to bind its value
-          to the recipe ingredient model's `amount` property. -->
         <input ng-model="ingredient.amount" type="text">
       </p>
     </div>
     <div class="grid-5 pad-top">
       <p class="flush-right">
-        <!-- TODO Add a directive to this anchor element so that you can
-          delete the recipe ingredient when the user clicks on the 'Delete' link. -->
         <a 
 					class="no-action-link"
 					ng-click="removeIngredient()"> 
@@ -172,8 +147,6 @@
 
   <div class="prefix-20 grid-80 add-row">
     <p>
-      <!-- TODO Add a directive to this button in order to handle
-        when the user clicks to add a new recipe ingredient. -->
       <button
 				ng-click="addIngredient()">
 				+ Add Another Ingredient
@@ -196,13 +169,9 @@
     </p>
   </div>
 
-  <!-- TODO Add a directive to this div element so that it repeats
-    for each recipe step to display. -->
   <div class="step-row" ng-repeat="step in recipe.steps">
     <div class="prefix-20 grid-75">
       <p>
-        <!-- TODO Add a directive to this input element to bind its value
-          to the recipe step model's `description` property. -->
         <input 
 					type="text"
 					ng-model="step.description">
@@ -210,8 +179,6 @@
     </div>
     <div class="grid-5 pad-top">
       <p class="flush-right">
-        <!-- TODO Add a directive to this anchor element so that you can
-          delete the recipe step when the user clicks on the 'Delete' link. -->
         <a 
 					class="no-action-link"
 					ng-click="removeStep($index)"> 
@@ -223,8 +190,6 @@
 
   <div class="prefix-20 grid-80 add-row">
     <p>
-     <!-- TODO Add a directive to this button in order to handle
-       when the user clicks to add a new recipe step. -->
 			<button
 				ng-click="addStep()">
 				+ Add Another Step
