--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -1,17 +1,11 @@
 <div class="grid-100 row controls">
   <div class="grid-30">
-    <!-- TODO Add directives to the select elememt in order to
-      populate the list with the categories from the database.
-      You'll also need to add directives to handle when the user
-      selects a new category so that you can refresh the recipes list. -->
     <select ng-model="currentCategory" ng-options="category.name for category in categories" ng-change="filterRecipeByCategory()">
       <option value="">All Categories</option>
     </select>
   </div>
   <div class="grid-70">
     <div class="flush-right">
-      <!-- TODO Add a directive to this button in order to handle
-        when the user clicks to add a new recipe. -->
       <button 
 				ng-click="addRecipe()">
 				+ Add Recipe
@@ -21,33 +15,21 @@
 </div>
 <div class="clear"></div>
 
-<!-- TODO Add a directive to this div element so that it only displays
-  when there are no recipes to display. -->
-
-	
+<!-- When there are no recipes for the existing category -->	
 <div ng-show="noRecipeFromFilter()" class="grid-100 row">
   <div class="grid-70">
     <p>No recipes found!</p>
   </div>
 </div>
 
-<!-- END: TODO => add directive to the div no Recipes found -->
 
-<!-- TODO Add a directive to this div element so that it repeats
-  for each recipe to display. Also, add a directive to this div element
-  so that it only displays when there are recipes to display. -->
 <div
   class="grid-100 row addHover"
   ng-repeat="recipe in recipes">
-  <!-- TODO Replace this anchor element's href attribute with a
-    directive so that you can route the user to the Recipe Detail
-    screen when they click on a row. -->
   <a
     ng-href="/#!/recipe/{{recipe._id}}">
     <div class="grid-70">
       <p>
-        <!-- TODO Add binding expressions here in order to
-          display information about the recipe. -->
           {{recipe.name}}
           <br>
           {{recipe.description}}
@@ -58,16 +40,11 @@
     <div class="grid-30">
       <div class="flush-right">
         <p>
-          <!-- TODO Replace this anchor element's href attribute with a
-            directive so that you can route the user to the Recipe Detail
-            screen when they click on the 'Edit' link. -->
           <a
             ng-href="/#!/edit/{{recipe._id}}">
             <img src="images/edit.svg" height="12px">
             Edit
           </a>
-          <!-- TODO Add a directive to this anchor element so that you can
-            delete the recipe when the user clicks on the 'Delete' link. -->
           <a
             class="no-action-link"
             ng-href="/#!/delete/{{recipe._id}}">
